tests/sksl/errors/Ossfuzz26759.glsl

void main() {
    int i;
    ivec3(i--);
}
